<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">ORTC Android Sample</string>
    <string name="action_settings">Settings</string>
    <string name="OrtcTitle">Connecting</string>
    <string name="ChannelName">Channel</string>
    <color name="white">#ffffffff</color>
    <color name="black">#ff000000</color>
    <color name="clear">#00000000</color>
    <string name="ButtonLabelSubscribe">Subscribe</string>
    <string name="ButtonLabelUnsubscribe">Unsubscribe</string>
    <string name="ButtonLabelSend">Send Message</string>
    <string name="ButtonLabelConnect">Connect</string>
    <string name="ButtonLabelDisconnect">Disconnect</string>
    <string name="ButtonLabelPresence">Presence</string>
    <string name="ButtonLabelEnablePresence">Enable Presence</string>
    <string name="ButtonLabelDisablePresence">Disable Presence</string>
    <string name="DefaultServer">http://ortc-developers.realtime.co/server/2.1/</string>
    <string name="DefaultChannel">yellow</string>
    <string name="DefaultText">My Android Super Message!</string>
    <string name="DefaultAuthenticationToken">your_authentication_token</string>
    <string name="DefaultApplicationKey">YOUR_APPLICATION_KEY</string>
    <string name="DefaultConnectionMetadata">AndroidConnMeta</string>
    <string name="TextViewDefaultTextLog"/>
    <string name="ButtonLabelClear">Clear Log</string>
    <string name="MessageName">Message</string>
    <string name="LogName">Log</string>
    <string name="ServerName">Server</string>
    <string name="AuthenticationTokenName">Authentication Token</string>
    <string name="ApplicationKeyName">Application Key</string>
    <string name="ConnectionMetadataName">Connection Metadata</string>
    <string name="IsClusterName">Is Cluster</string>
</resources>
