<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:overScrollMode="always" 
    android:isScrollContainer="true" 
    android:scrollbarAlwaysDrawVerticalTrack="true" 
    android:scrollbarStyle="outsideInset" 
    android:scrollbars="vertical"
    tools:context=".ORTCAndroidSample" >
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:scrollbars="vertical"
		android:id="@+id/linearLayout1"
	    android:background="@color/white"
	    android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true">
	
	<RelativeLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ServerName"
	        android:textColor="@color/black"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentBottom="true" />
		
	    <CheckBox
	        android:id="@+id/CheckBoxIsCluster"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/IsClusterName"
	        android:textColor="@color/black"
	        android:textSize="14sp"
	        android:checked="true"
	        android:layout_alignParentRight="true" />
	    
    </RelativeLayout>

    <EditText
        android:id="@+id/EditTextServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DefaultServer"
        android:hint="@string/DefaultServer" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AuthenticationTokenName"
        android:textColor="@color/black" />
    
    <EditText
        android:id="@+id/EditTextAuthenticationToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DefaultAuthenticationToken"
        android:hint="@string/DefaultAuthenticationToken" />
    
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:text="@string/ApplicationKeyName"
	        android:textColor="@color/black" />
	    
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="190dp"
	        android:layout_height="wrap_content"
	        android:text="@string/ConnectionMetadataName"
	        android:textColor="@color/black" />    
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText
	        android:id="@+id/EditTextApplicationKey"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultApplicationKey"
	        android:hint="@string/DefaultApplicationKey" />
        
        <EditText
	        android:id="@+id/EditTextConnectionMetadata"
	        android:layout_width="190dp"
	        android:layout_height="wrap_content"
	        android:text="@string/DefaultConnectionMetadata"
	        android:hint="@string/DefaultConnectionMetadata" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChannelName"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/EditTextChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DefaultChannel"
        android:hint="@string/DefaultChannel" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MessageName"
        android:textColor="@color/black" />
    
    <EditText
        android:id="@+id/EditTextMessage"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_gravity="left"
        android:lines="3"
        android:gravity="top"
        android:text="@string/DefaultText"
        android:hint="@string/DefaultText" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ButtonConnect"
            android:onClick="connectClickEventHandler"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelConnect" />
        
        <Button
            android:id="@+id/ButtonSend"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:onClick="sendClickEventHandler"
            android:textSize="11sp"
            android:text="@string/ButtonLabelSend" />
        
        <Button
            android:id="@+id/ButtonDisconnect"
            android:onClick="disconnectClickEventHandler"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelDisconnect" />
    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<Button
            android:id="@+id/ButtonSubscribe"
            android:onClick="subscribeClickEventHandler"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelSubscribe" />

        <Button
            android:id="@+id/ButtonUnsubscribe"
            android:onClick="unsubscribeClickEventHandler"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelUnsubscribe" />
        
        <Button
            android:id="@+id/ButtonClear"
            android:onClick="clearClickEventHandler"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelClear" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/linearLayoutPresence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
       	<Button
            android:id="@+id/ButtonPresence"    
            android:onClick="presenceClickEventHandler"        
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelPresence" />

        <Button
            android:id="@+id/ButtonEnablePresence"
            android:onClick="enablePresenceClickEventHandler"            
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelEnablePresence" />
        
        <Button
            android:id="@+id/ButtonDisablePresence"
            android:onClick="disablePresenceClickEventHandler"            
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/ButtonLabelDisablePresence" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogName"
        android:textColor="@color/black" />
    
    <TextView
        android:id="@+id/TextViewLog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/TextViewDefaultTextLog"
        android:textColor="@color/white"
        android:minLines="10"
	 	android:background="@color/black" />
    
	</LinearLayout>
    
</ScrollView>